# libgeohash

./: .gitignore  CMakeLists.txt  README  cmake_uninstall.cmake.in  package.sh
debian/: changelog  control  copyright  rules
examples/: example.c
include/: CMakeLists.txt  geohash.h
scripts/: genclass
src/: CMakeLists.txt  geohash.c  main.c
tests/: CMakeLists.txt  FindCUNIT.cmake  geohash_test.c
