CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
ENABLE_TESTING()
SET(CMAKE_COLOR_MAKEFILE ON)

PROJECT(geohash)
SET(geohash_VERSION_MAJOR 1)
SET(geohash_VERSION_MINOR 0)

SET(CMAKE_C_FLAGS, "-Wall")
SET(CMAKE_C_FLAGS_DEBUG, "-g")
SET(CMAKE_C_FLAGS_RELEASE, "-O2")

ADD_SUBDIRECTORY(include)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(bin)

